--- a/scripts/ipython_notbooks/test.ipynb
+++ b/scripts/ipython_notbooks/test.ipynb
@@ -2,173 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Function get_embeddings total time: 0.4551307\n",
-      "Function save_message_to_search_table total time: 0.4687950\n",
-      "Function get_embeddings total time: 0.3005491\n",
-      "Function save_message_to_search_table total time: 0.3128592\n",
-      "Function get_embeddings total time: 0.2498403\n",
-      "Function save_message_to_search_table total time: 0.2606793\n",
-      "Function get_embeddings total time: 0.3144316\n",
-      "Function save_message_to_search_table total time: 0.3245503\n",
-      "Function get_embeddings total time: 0.4315269\n",
-      "Function save_message_to_search_table total time: 0.4420669\n",
-      "Function get_embeddings total time: 0.3465085\n",
-      "Function save_message_to_search_table total time: 0.3597666\n",
-      "Function get_embeddings total time: 0.4168975\n",
-      "Function save_message_to_search_table total time: 0.4287541\n",
-      "Function get_embeddings total time: 0.3234814\n",
-      "Function save_message_to_search_table total time: 0.3366260\n",
-      "Function get_embeddings total time: 0.3024496\n",
-      "Function save_message_to_search_table total time: 0.3135575\n",
-      "Function get_embeddings total time: 0.3352253\n",
-      "Function save_message_to_search_table total time: 0.3460467\n",
-      "Function get_embeddings total time: 0.4786259\n",
-      "Function save_message_to_search_table total time: 0.4905748\n",
-      "Function get_embeddings total time: 0.4124401\n",
-      "Function save_message_to_search_table total time: 0.4246535\n",
-      "Function get_embeddings total time: 0.3745371\n",
-      "Function save_message_to_search_table total time: 0.3874389\n",
-      "Function get_embeddings total time: 0.3390689\n",
-      "Function save_message_to_search_table total time: 0.3492970\n",
-      "Function get_embeddings total time: 0.3380935\n",
-      "Function save_message_to_search_table total time: 0.3514453\n",
-      "Function get_embeddings total time: 0.3366988\n",
-      "Function save_message_to_search_table total time: 0.3491431\n",
-      "Function get_embeddings total time: 0.3693921\n",
-      "Function save_message_to_search_table total time: 0.3825009\n",
-      "Function get_embeddings total time: 0.3294147\n",
-      "Function save_message_to_search_table total time: 0.3420208\n",
-      "Function get_embeddings total time: 0.3900096\n",
-      "Function save_message_to_search_table total time: 0.4009946\n",
-      "Function get_embeddings total time: 0.2954308\n",
-      "Function save_message_to_search_table total time: 0.3086476\n",
-      "Function get_embeddings total time: 0.7640851\n",
-      "Function save_message_to_search_table total time: 0.7763098\n",
-      "Function get_embeddings total time: 0.3434567\n",
-      "Function save_message_to_search_table total time: 0.3571293\n",
-      "Function get_embeddings total time: 0.3606163\n",
-      "Function save_message_to_search_table total time: 0.3740376\n",
-      "Function get_embeddings total time: 0.3445270\n",
-      "Function save_message_to_search_table total time: 0.3569898\n",
-      "Function get_embeddings total time: 0.2962355\n",
-      "Function save_message_to_search_table total time: 0.3100933\n",
-      "Function get_embeddings total time: 0.3313505\n",
-      "Function save_message_to_search_table total time: 0.3435250\n",
-      "Function get_embeddings total time: 0.3210668\n",
-      "Function save_message_to_search_table total time: 0.3341756\n",
-      "Function get_embeddings total time: 0.3572567\n",
-      "Function save_message_to_search_table total time: 0.3710921\n",
-      "Function get_embeddings total time: 0.3375371\n",
-      "Function save_message_to_search_table total time: 0.3503143\n",
-      "Function get_embeddings total time: 0.3432467\n",
-      "Function save_message_to_search_table total time: 0.3539342\n",
-      "Function get_embeddings total time: 0.2879270\n",
-      "Function save_message_to_search_table total time: 0.3021765\n",
-      "Function get_embeddings total time: 0.3710193\n",
-      "Function save_message_to_search_table total time: 0.3822853\n",
-      "Function get_embeddings total time: 0.3648848\n",
-      "Function save_message_to_search_table total time: 0.3736430\n",
-      "Function get_embeddings total time: 0.3259301\n",
-      "Function save_message_to_search_table total time: 0.3361760\n",
-      "Function get_embeddings total time: 0.3062982\n",
-      "Function save_message_to_search_table total time: 0.3153118\n",
-      "Function get_embeddings total time: 0.3231958\n",
-      "Function save_message_to_search_table total time: 0.3338321\n",
-      "Function get_embeddings total time: 0.3343821\n",
-      "Function save_message_to_search_table total time: 0.3432753\n",
-      "Function get_embeddings total time: 0.7085208\n",
-      "Function save_message_to_search_table total time: 0.7173114\n",
-      "Function get_embeddings total time: 0.4054606\n",
-      "Function save_message_to_search_table total time: 0.4148785\n",
-      "Function get_embeddings total time: 0.5751068\n",
-      "Function save_message_to_search_table total time: 0.5864155\n",
-      "Function get_embeddings total time: 0.3541087\n",
-      "Function save_message_to_search_table total time: 0.3650357\n",
-      "Function get_embeddings total time: 0.4126893\n",
-      "Function save_message_to_search_table total time: 0.4248231\n",
-      "Function get_embeddings total time: 0.7303574\n",
-      "Function save_message_to_search_table total time: 0.7426133\n",
-      "Function get_embeddings total time: 0.2994409\n",
-      "Function save_message_to_search_table total time: 0.3094888\n",
-      "Function get_embeddings total time: 0.2768922\n",
-      "Function save_message_to_search_table total time: 0.2890430\n",
-      "Function get_embeddings total time: 0.3630322\n",
-      "Function save_message_to_search_table total time: 0.3745518\n",
-      "Function get_embeddings total time: 0.3440344\n",
-      "Function save_message_to_search_table total time: 0.3584897\n",
-      "Function get_embeddings total time: 0.3467053\n",
-      "Function save_message_to_search_table total time: 0.3593052\n",
-      "Function get_embeddings total time: 0.3154018\n",
-      "Function save_message_to_search_table total time: 0.3272795\n",
-      "Function get_embeddings total time: 0.4035047\n",
-      "Function save_message_to_search_table total time: 0.4159243\n",
-      "Function get_embeddings total time: 0.3586178\n",
-      "Function save_message_to_search_table total time: 0.3717172\n",
-      "Function get_embeddings total time: 0.4279297\n",
-      "Function save_message_to_search_table total time: 0.4402839\n",
-      "Function get_embeddings total time: 0.4034084\n",
-      "Function save_message_to_search_table total time: 0.4154854\n",
-      "Function get_embeddings total time: 0.4217048\n",
-      "Function save_message_to_search_table total time: 0.4346824\n",
-      "Function get_embeddings total time: 0.3559798\n",
-      "Function save_message_to_search_table total time: 0.3688155\n",
-      "Function get_embeddings total time: 0.3250162\n",
-      "Function save_message_to_search_table total time: 0.3366549\n",
-      "Function get_embeddings total time: 0.3604271\n",
-      "Function save_message_to_search_table total time: 0.3722265\n",
-      "Function get_embeddings total time: 0.2910930\n",
-      "Function save_message_to_search_table total time: 0.3031042\n",
-      "Function get_embeddings total time: 0.3156655\n",
-      "Function save_message_to_search_table total time: 0.3289250\n",
-      "Function get_embeddings total time: 0.2706789\n",
-      "Function save_message_to_search_table total time: 0.2773444\n",
-      "Function get_embeddings total time: 0.3767319\n",
-      "Function save_message_to_search_table total time: 0.3897908\n",
-      "Function get_embeddings total time: 0.3450854\n",
-      "Function save_message_to_search_table total time: 0.3577898\n",
-      "Function get_embeddings total time: 0.3978379\n",
-      "Function save_message_to_search_table total time: 0.4094188\n",
-      "Function get_embeddings total time: 0.3348991\n",
-      "Function save_message_to_search_table total time: 0.3477584\n",
-      "Function get_embeddings total time: 0.3021010\n",
-      "Function save_message_to_search_table total time: 0.3131850\n",
-      "Function get_embeddings total time: 0.2852189\n",
-      "Function save_message_to_search_table total time: 0.2977551\n",
-      "Function get_embeddings total time: 0.2808539\n",
-      "Function save_message_to_search_table total time: 0.2900187\n",
-      "Function get_embeddings total time: 0.3163209\n",
-      "Function save_message_to_search_table total time: 0.3285368\n",
-      "Function get_embeddings total time: 0.3039004\n",
-      "Function save_message_to_search_table total time: 0.3174707\n",
-      "Function get_embeddings total time: 0.5364883\n",
-      "Function save_message_to_search_table total time: 0.5492354\n",
-      "Function get_embeddings total time: 0.3840077\n",
-      "Function save_message_to_search_table total time: 0.3961098\n",
-      "Function get_embeddings total time: 0.3425092\n",
-      "Function save_message_to_search_table total time: 0.3546673\n",
-      "Function get_embeddings total time: 0.2955645\n",
-      "Function save_message_to_search_table total time: 0.3077342\n",
-      "Function get_embeddings total time: 0.4544728\n",
-      "Function save_message_to_search_table total time: 0.4678439\n",
-      "Function _fetch_recent_messages_for_bot_room total time: 0.0063397\n",
-      "Function get_embeddings total time: 0.3924609\n",
-      "Function _fetch_similar_messages_for_bot_room total time: 0.4086630\n",
-      "Function get_completion total time: 2.1600541\n",
-      "Function get_embeddings total time: 0.3533227\n",
-      "Function save_message_to_search_table total time: 0.3680904\n",
-      "Function _fetch_recent_messages_for_bot_room total time: 0.0048490\n",
-      "Function get_embeddings total time: 0.3753507\n",
-      "Function _fetch_similar_messages_for_bot_room total time: 0.3893043\n",
-      "Function get_completion total time: 1.7108705\n",
-      "Function _fetch_recent_messages_for_bot_room total time: 0.0166769\n",
-      "Function get_completion total time: 1.4260578\n",
+      "An error occurred while reading /Users/nicholasbern/src/holocron/scripts/../data/templates/questions_answers/question-answer-few-shot-examples.json: [Errno 2] No such file or directory: '/Users/nicholasbern/src/holocron/scripts/../data/templates/questions_answers/question-answer-few-shot-examples.json'\n",
+      "An error occurred while reading /Users/nicholasbern/src/holocron/scripts/../data/templates/questions_answers/question-reframed-question-few-shot-examples.json: [Errno 2] No such file or directory: '/Users/nicholasbern/src/holocron/scripts/../data/templates/questions_answers/question-reframed-question-few-shot-examples.json'\n",
+      "Function _fetch_recent_messages_for_bot_room total time: 0.0056161\n",
+      "Function get_embeddings total time: 0.3665963\n",
+      "Function _fetch_similar_messages_for_bot_room total time: 0.3780304\n",
+      "Function get_completion total time: 2.7234469\n",
+      "Function _fetch_recent_messages_for_bot_room total time: 0.0058600\n",
+      "Function get_embeddings total time: 0.3628035\n",
+      "Function _fetch_similar_messages_for_bot_room total time: 0.3745815\n",
+      "Function get_completion total time: 1.4979226\n",
+      "Function get_embeddings total time: 0.3528354\n",
+      "Function save_message_to_search_table total time: 0.3621405\n",
       "Data successfully saved to /Users/nicholasbern/src/holocron/scripts/../data/test_outputs/memories-test-results.jsonl\n"
      ]
     }
@@ -185,37 +37,36 @@
     "if parent_dir not in sys.path:\n",
     "    sys.path.insert(0, parent_dir)\n",
     "\n",
-    "from scripts import config, setup\n",
+    "from scripts import test_config, setup\n",
     "from src import memory, storage\n",
     "from src.utils import common, extract\n",
     "\n",
     "\n",
-    "test_data = config.get_test_data()\n",
+    "test_data = test_config.get_test_data()\n",
     "\n",
-    "setup.delete_db(test_data[\"database\"][\"delete_db_script\"], test_data[\"database\"][\"params\"])\n",
-    "setup.initialize_db(\n",
-    "    test_data[\"database\"][\"create_db_script\"], \n",
-    "    test_data[\"database\"][\"sql_file\"], \n",
-    "    test_data[\"database\"][\"params\"]\n",
-    ")\n",
+    "# Comment out if you have already initialized the database\n",
+    "# setup.delete_db(test_data[\"database\"][\"delete_db_script\"], test_data[\"database\"][\"params\"])\n",
+    "# setup.initialize_db(\n",
+    "#     test_data[\"database\"][\"create_db_script\"], \n",
+    "#     test_data[\"database\"][\"sql_file\"], \n",
+    "#     test_data[\"database\"][\"params\"]\n",
+    "# )\n",
     "\n",
     "responses = []\n",
-    "\n",
     "for conversation in itertools.islice(\n",
     "      test_data[\"test\"][\"conversations\"],\n",
     "      test_data[\"test\"][\"how_many_conversations\"]\n",
     "):\n",
     "    conversation_data = extract.extract_conversation_data(conversation)\n",
-    "    storage.save_conversation_to_search_table(test_data, conversation_data)\n",
+    "    # storage.save_conversation_to_search_table(test_data, conversation_data)\n",
     "\n",
     "    memory.ask_questions(test_data, conversation_data)\n",
+    "    # memory.generate_takeaways(test_data, conversation_data)\n",
     "\n",
-    "    response = memory.get_response_to_conversation(test_data, conversation_data)\n",
-    "    response_no_answers = memory.get_response_to_conversation_no_answers(test_data, conversation_data)\n",
+    "    # response = memory.get_response_to_conversation(test_data, conversation_data)\n",
+    "    #responses += [{\"conversation\": conversation, \"response\": response}]\n",
     "\n",
-    "    responses.append({\"conversation\": conversation, \"response\": response, \"response_no_answers\": response_no_answers})\n",
-    "\n",
-    "common.save_jsonl_file(test_data[\"test\"][\"test_save_output_filepath\"], responses)"
+    "common.save_jsonl_file(test_data[\"test\"][\"test_save_output_filepath\"], responses)\n"
    ]
   }
  ],
