temp, don't push

--- a/scripts/ipython_notbooks/test.ipynb
+++ b/scripts/ipython_notbooks/test.ipynb
@@ -2,26 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "An error occurred while reading /Users/nicholasbern/src/holocron/scripts/../data/templates/questions_answers/question-answer-few-shot-examples.json: [Errno 2] No such file or directory: '/Users/nicholasbern/src/holocron/scripts/../data/templates/questions_answers/question-answer-few-shot-examples.json'\n",
-      "An error occurred while reading /Users/nicholasbern/src/holocron/scripts/../data/templates/questions_answers/question-reframed-question-few-shot-examples.json: [Errno 2] No such file or directory: '/Users/nicholasbern/src/holocron/scripts/../data/templates/questions_answers/question-reframed-question-few-shot-examples.json'\n",
-      "Function _fetch_recent_messages_for_bot_room total time: 0.0056161\n",
-      "Function get_embeddings total time: 0.3665963\n",
-      "Function _fetch_similar_messages_for_bot_room total time: 0.3780304\n",
-      "Function get_completion total time: 2.7234469\n",
-      "Function _fetch_recent_messages_for_bot_room total time: 0.0058600\n",
-      "Function get_embeddings total time: 0.3628035\n",
-      "Function _fetch_similar_messages_for_bot_room total time: 0.3745815\n",
-      "Function get_completion total time: 1.4979226\n",
-      "Function get_embeddings total time: 0.3528354\n",
-      "Function save_message_to_search_table total time: 0.3621405\n",
-      "Data successfully saved to /Users/nicholasbern/src/holocron/scripts/../data/test_outputs/memories-test-results.jsonl\n"
+     "ename": "KeyError",
+     "evalue": "'question_answer_few_shot_examples_file'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 16\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscripts\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m test_config, setup\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pipeline\n\u001b[0;32m---> 16\u001b[0m config_data \u001b[38;5;241m=\u001b[39m \u001b[43mtest_config\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_config_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m setup\u001b[38;5;241m.\u001b[39mdelete_db(config_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatabase\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdelete_db_script\u001b[39m\u001b[38;5;124m\"\u001b[39m], config_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatabase\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparams\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m     19\u001b[0m setup\u001b[38;5;241m.\u001b[39minitialize_db(\n\u001b[1;32m     20\u001b[0m     config_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatabase\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcreate_db_script\u001b[39m\u001b[38;5;124m\"\u001b[39m], \n\u001b[1;32m     21\u001b[0m     config_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatabase\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msql_file\u001b[39m\u001b[38;5;124m\"\u001b[39m], \n\u001b[1;32m     22\u001b[0m     config_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatabase\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparams\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m     23\u001b[0m )\n",
+      "File \u001b[0;32m~/src/holocron/scripts/test_config.py:121\u001b[0m, in \u001b[0;36mget_config_data\u001b[0;34m()\u001b[0m\n\u001b[1;32m    114\u001b[0m config \u001b[38;5;241m=\u001b[39m configparser\u001b[38;5;241m.\u001b[39mConfigParser()\n\u001b[1;32m    115\u001b[0m config\u001b[38;5;241m.\u001b[39mread(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(file_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest_config.ini\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m    117\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m {\n\u001b[1;32m    118\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m'\u001b[39m: _get_config_data(config, root_dir),\n\u001b[1;32m    119\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatabase\u001b[39m\u001b[38;5;124m'\u001b[39m: _get_database_config_data(config, root_dir),\n\u001b[1;32m    120\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msearch\u001b[39m\u001b[38;5;124m'\u001b[39m: _get_search_config_data(config),\n\u001b[0;32m--> 121\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mquestions\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[43m_get_questions_pipeline_config_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mroot_dir\u001b[49m\u001b[43m)\u001b[49m,\n\u001b[1;32m    122\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mactions\u001b[39m\u001b[38;5;124m'\u001b[39m: _get_actions_pipeline_config_data(config, root_dir),\n\u001b[1;32m    123\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchat\u001b[39m\u001b[38;5;124m'\u001b[39m: _get_chat_pipeline_config_data(config, root_dir)\n\u001b[1;32m    124\u001b[0m }\n",
+      "File \u001b[0;32m~/src/holocron/scripts/test_config.py:21\u001b[0m, in \u001b[0;36m_get_questions_pipeline_config_data\u001b[0;34m(config, root_dir)\u001b[0m\n\u001b[1;32m     16\u001b[0m questions \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(itertools\u001b[38;5;241m.\u001b[39mchain\u001b[38;5;241m.\u001b[39mfrom_iterable(questions_dict))\n\u001b[1;32m     17\u001b[0m question_reframe_template \u001b[38;5;241m=\u001b[39m common\u001b[38;5;241m.\u001b[39mread_file(\n\u001b[1;32m     18\u001b[0m     os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(root_dir, config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQuestions\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquestion_reframe_template_file\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m     19\u001b[0m )\n\u001b[1;32m     20\u001b[0m question_answer_few_shot_examples \u001b[38;5;241m=\u001b[39m common\u001b[38;5;241m.\u001b[39mread_jsonl_file(\n\u001b[0;32m---> 21\u001b[0m     os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(root_dir, \u001b[43mconfig\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mQuestions\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mquestion_answer_few_shot_examples_file\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[1;32m     22\u001b[0m )\n\u001b[1;32m     23\u001b[0m question_reframed_question_few_shot_examples \u001b[38;5;241m=\u001b[39m common\u001b[38;5;241m.\u001b[39mread_jsonl_file(\n\u001b[1;32m     24\u001b[0m     os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(root_dir, config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQuestions\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquestion_reframed_question_few_shot_examples_file\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m     25\u001b[0m )\n\u001b[1;32m     26\u001b[0m question_output_schema \u001b[38;5;241m=\u001b[39m common\u001b[38;5;241m.\u001b[39mread_json_file(\n\u001b[1;32m     27\u001b[0m     os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(root_dir, config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQuestions\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquestion_output_schema_file\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m     28\u001b[0m )\n",
+      "File \u001b[0;32m/Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/configparser.py:1257\u001b[0m, in \u001b[0;36mSectionProxy.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1255\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key):\n\u001b[1;32m   1256\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parser\u001b[38;5;241m.\u001b[39mhas_option(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_name, key):\n\u001b[0;32m-> 1257\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key)\n\u001b[1;32m   1258\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parser\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_name, key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'question_answer_few_shot_examples_file'"
      ]
     }
    ],
@@ -38,35 +33,34 @@
     "    sys.path.insert(0, parent_dir)\n",
     "\n",
     "from scripts import test_config, setup\n",
-    "from src import memory, storage\n",
-    "from src.utils import common, extract\n",
+    "from src import pipeline\n",
     "\n",
     "\n",
-    "test_data = test_config.get_test_data()\n",
+    "config_data = test_config.get_config_data()\n",
     "\n",
-    "# Comment out if you have already initialized the database\n",
-    "# setup.delete_db(test_data[\"database\"][\"delete_db_script\"], test_data[\"database\"][\"params\"])\n",
-    "# setup.initialize_db(\n",
-    "#     test_data[\"database\"][\"create_db_script\"], \n",
-    "#     test_data[\"database\"][\"sql_file\"], \n",
-    "#     test_data[\"database\"][\"params\"]\n",
-    "# )\n",
+    "setup.delete_db(config_data[\"database\"][\"delete_db_script\"], config_data[\"database\"][\"params\"])\n",
+    "setup.initialize_db(\n",
+    "    config_data[\"database\"][\"create_db_script\"], \n",
+    "    config_data[\"database\"][\"sql_file\"], \n",
+    "    config_data[\"database\"][\"params\"]\n",
+    ")\n",
     "\n",
     "responses = []\n",
-    "for conversation in itertools.islice(\n",
-    "      test_data[\"test\"][\"conversations\"],\n",
-    "      test_data[\"test\"][\"how_many_conversations\"]\n",
-    "):\n",
-    "    conversation_data = extract.extract_conversation_data(conversation)\n",
-    "    # storage.save_conversation_to_search_table(test_data, conversation_data)\n",
+    "for scenerio_data in itertools.islice(config_data[\"test\"][\"scenerios\"]):\n",
+    "    pipeline.initialize_ltm_pipeline(config_data, scenerio_data)\n",
+    "    # pipeline.initialize_stm_pipeline(config_data, scenerio_data)\n",
     "\n",
-    "    memory.ask_questions(test_data, conversation_data)\n",
-    "    # memory.generate_takeaways(test_data, conversation_data)\n",
+    "    pipeline.run_memory_creation_pipeline(config_data, scenerio_data)\n",
+    "    # pipeline.run_memory_consolidation_pipeline(config_data, scenerio_data)\n",
     "\n",
-    "    # response = memory.get_response_to_conversation(test_data, conversation_data)\n",
-    "    #responses += [{\"conversation\": conversation, \"response\": response}]\n",
+    "    # scenerio_responses = []\n",
+    "    # for _ in range(config_data[\"test\"][\"how_many_responses\"]):\n",
+    "    #     response = pipeline.run_chat_pipeline(config_data, scenerio_data)\n",
+    "    #     scenerio_responses += [response]\n",
     "\n",
-    "common.save_jsonl_file(test_data[\"test\"][\"test_save_output_filepath\"], responses)\n"
+    "    # responses += [scenerio_responses]\n",
+    "\n",
+    "# common.save_jsonl_file(config_data[\"test\"][\"test_save_output_filepath\"], responses)\n"
    ]
   }
  ],
