add command line functionality

--- a/scripts/ipython_notbooks/test.ipynb
+++ b/scripts/ipython_notbooks/test.ipynb
@@ -12,7 +12,7 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "parent_dir = os.path.abspath(os.path.join(os.getcwd(), \"..\", os.pardir))\n",
+    "parent_dir = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
     "if parent_dir not in sys.path:\n",
     "    sys.path.insert(0, parent_dir)\n",
     "\n",
@@ -20,54 +20,16 @@
     "from src import pipeline\n",
     "from src.storage import retrieve\n",
     "\n",
-    "\n",
+    "# set up data stores\n",
     "config_data = test_config.get_config_data()\n",
-    "scenerio_data = config_data[\"test\"][\"scenerios\"][0]\n",
+    "setup.initialize_data_stores(config_data)\n",
     "\n",
-    "setup.initialize_data_stores(config_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pipeline.backfill_stm(config_data, scenerio_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bot_datas = {bot[\"full_name\"]: bot for bot in scenerio_data[\"users\"][\"bots\"]}\n",
-    "print([key for key in bot_datas.keys()])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bot_data = bot_datas[\"Juan Tana Mera\"]\n",
-    "for question in config_data[\"create\"][\"questions\"][:1]:\n",
-    "    pipeline.answer_question(config_data, scenerio_data, bot_data, question)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "message = retrieve.get_latest_event(config_data, scenerio_data)\n",
+    "# backfill data\n",
+    "scenerio_data = config_data[\"test\"][\"scenerio\"][0]\n",
+    "pipeline.backfill_stm(config_data, scenerio_data)\n",
     "\n",
-    "bot_data = bot_datas[\"Juan Tana Mera\"]  # bot you want to respond\n",
-    "response = pipeline.chat(config_data, scenerio_data, bot_data, message)\n",
-    "pipeline.update_stm(config_data, scenerio_data, bot_data, response)"
+    "# make bots available\n",
+    "bot_datas = config_data[\"test\"][\"bot_datas\"]"
    ]
   },
   {
@@ -76,10 +38,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "message = retrieve.get_latest_event(config_data, scenerio_data)\n",
+    "def ask_bot_questions(bot_user_id, questions):\n",
+    "    bot_data = bot_datas[bot_user_id]\n",
+    "    for question in questions:\n",
+    "        pipeline.answer_question(config_data, scenerio_data, bot_data, question)\n",
     "\n",
-    "pipeline.update_mtm(config_data, scenerio_data, message)\n",
-    "pipeline.update_ltm(config_data, scenerio_data, message)"
+    "ask_bot_questions(bot_datas[\"alice\"], config_data[\"test\"][\"questions\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_bot_response(bot_user_id):\n",
+    "    bot_data = bot_datas[bot_user_id]\n",
+    "    message = retrieve.get_latest_event(config_data, scenerio_data)\n",
+    "    response = pipeline.chat(config_data, scenerio_data, bot_data, message)\n",
+    "    pipeline.update_stm(config_data, scenerio_data, bot_data, response)\n",
+    "\n",
+    "get_bot_response(bot_datas[\"alice\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_memory():\n",
+    "    message = retrieve.get_latest_event(config_data, scenerio_data)\n",
+    "    pipeline.update_mtm(config_data, scenerio_data, message)\n",
+    "    pipeline.update_ltm(config_data, scenerio_data, message)\n",
+    "\n",
+    "update_memory()"
    ]
   },
   {
