--- a/scripts/ipython_notbooks/test.ipynb
+++ b/scripts/ipython_notbooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,20 +16,10 @@
     "if parent_dir not in sys.path:\n",
     "    sys.path.insert(0, parent_dir)\n",
     "\n",
-    "from scripts import test_config, setup\n",
-    "from src import pipeline\n",
-    "from src.storage import retrieve\n",
+    "from scripts import test\n",
     "\n",
     "# set up data stores\n",
-    "config_data = test_config.get_config_data()\n",
-    "setup.initialize_data_stores(config_data)\n",
-    "\n",
-    "# backfill data\n",
-    "scenerio_data = config_data[\"test\"][\"scenerio\"][0]\n",
-    "pipeline.backfill_stm(config_data, scenerio_data)\n",
-    "\n",
-    "# make bots available\n",
-    "bot_datas = config_data[\"test\"][\"bot_datas\"]"
+    "config_data, scenario_data = test.initialize()"
    ]
   },
   {
@@ -38,12 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ask_bot_questions(bot_user_id, questions):\n",
-    "    bot_data = bot_datas[bot_user_id]\n",
-    "    for question in questions:\n",
-    "        pipeline.answer_question(config_data, scenerio_data, bot_data, question)\n",
-    "\n",
-    "ask_bot_questions(bot_datas[\"alice\"], config_data[\"test\"][\"questions\"])"
+    "test.ask_bot_questions(config_data[\"test\"][\"bot_datas\"][\"alice\"], config_data[\"test\"][\"questions\"])"
    ]
   },
   {
@@ -52,13 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_bot_response(bot_user_id):\n",
-    "    bot_data = bot_datas[bot_user_id]\n",
-    "    message = retrieve.get_latest_event(config_data, scenerio_data)\n",
-    "    response = pipeline.chat(config_data, scenerio_data, bot_data, message)\n",
-    "    pipeline.update_stm(config_data, scenerio_data, bot_data, response)\n",
-    "\n",
-    "get_bot_response(bot_datas[\"alice\"])"
+    "test.get_bot_response(config_data[\"test\"][\"bot_datas\"][\"alice\"])"
    ]
   },
   {
@@ -67,22 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_memory():\n",
-    "    message = retrieve.get_latest_event(config_data, scenerio_data)\n",
-    "    pipeline.update_mtm(config_data, scenerio_data, message)\n",
-    "    pipeline.update_ltm(config_data, scenerio_data, message)\n",
-    "\n",
-    "update_memory()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print all the memory stores?\n",
-    "print(config_data[\"summarize\"][\"mtm_template\"])"
+    "test.update_bots_memory(config_data, scenario_data)"
    ]
   }
  ],
