add ability to turn off memory

--- a/scripts/ipython_notbooks/test.ipynb
+++ b/scripts/ipython_notbooks/test.ipynb
@@ -28,24 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test.ask_bot_questions(config_data[\"test\"][\"bot_datas\"][\"alice\"], config_data[\"test\"][\"questions\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test.get_bot_response(config_data[\"test\"][\"bot_datas\"][\"alice\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test.ask_bot_questions(config_data[\"test\"][\"bot_datas\"][\"alice\"], config_data[\"test\"][\"questions\"])\n",
+    "test.make_bot_reply(config_data[\"test\"][\"bot_datas\"][\"alice\"])\n",
+    "test.chat_as_self(config_data, scenario_data, \"\")\n",
     "test.update_bots_memory(config_data, scenario_data)"
    ]
   }
