--- a/scripts/ipython_notbooks/test.ipynb
+++ b/scripts/ipython_notbooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,15 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "parent_dir = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "notebook_dir = os.getcwd()\n",
+    "parent_dir = os.path.abspath(os.path.join(notebook_dir, \"..\", \"..\"))\n",
     "if parent_dir not in sys.path:\n",
     "    sys.path.insert(0, parent_dir)\n",
     "\n",
-    "from scripts import test\n",
+    "from scripts import test_utils\n",
     "\n",
-    "# set up data stores\n",
-    "config_data, scenario_data = test.initialize()"
+    "\n",
+    "config_data, scenario_data = test_utils.initialize()"
    ]
   },
   {
@@ -28,10 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test.ask_bot_questions(config_data[\"test\"][\"bot_datas\"][\"alice\"], config_data[\"test\"][\"questions\"])\n",
-    "test.make_bot_reply(config_data[\"test\"][\"bot_datas\"][\"alice\"])\n",
-    "test.chat_as_self(config_data, scenario_data, \"\")\n",
-    "test.update_bots_memory(config_data, scenario_data)"
+    "test_utils.ask_bot_questions(config_data, scenario_data, config_data[\"test\"][\"bot_datas\"][\"alice\"], config_data[\"test\"][\"questions\"])\n",
+    "# test_utils.make_bot_reply(config_data[\"test\"][\"bot_datas\"][\"alice\"])\n",
+    "# test_utils.chat_as_self(config_data, scenario_data, \"\")\n",
+    "# test_utils.update_bots_memory(config_data, scenario_data)"
    ]
   }
  ],
