remove unused util.parse

--- a/scripts/ipython_notbooks/intent_detection.ipynb
+++ b/scripts/ipython_notbooks/intent_detection.ipynb
@@ -40,7 +40,7 @@
     "    sys.path.insert(0, parent_dir)\n",
     "\n",
     "from scripts import test_config\n",
-    "from src.utils import parse, common, handlebars, generate, intent\n",
+    "from src.utils import common, handlebars, generate, intent\n",
     "\n",
     "config_data = test_config.get_config_data()\n",
     "\n",
